added Professor to Notification